--- a/index.html
+++ b/index.html
@@ -2,40 +2,68 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width,user-scalable=no">
+	
 	<title>SSleepy</title>
+	
 	<link rel="stylesheet" href="lib/tau/wearable/theme/default/tau.min.css">
 	<link rel="stylesheet" media="all and (-tizen-geometric-shape: circle)" href="lib/tau/wearable/theme/default/tau.circle.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   <div class="ui-page ui-page-active" id="main">
-      <header class="ui-header">
-         <h2 class="ui-title"><img src="icon.png" class="app-icon"> SSleepy</h2>
-      </header>
-      <div class="ui-content content-padding">
-         <ul class="ui-listview">
-         	<li class="ui-group-index">Media</li>
-         	<li class="ui-li-anchor li-has-thumb-left"><a id="playpause" href="#">Play/Pause <div class="img-icon play-icon ui-li-thumb-left"></div></a></li>
-         	<li class="ui-li-anchor li-has-thumb-left"><a id="next" href="#">Next <div class="img-icon next-icon ui-li-thumb-left"></div></a></li>
-         	<li class="ui-li-anchor li-has-thumb-left"><a id="prev" href="#">Previous <div class="img-icon prev-icon ui-li-thumb-left"></div></a></li>
-         	<li class="ui-li-anchor li-has-thumb-left"><a id="volumeup" href="#">Vol. Up <div class="img-icon volume-icon ui-li-thumb-left"></div></a></li>
-         	<li class="ui-li-anchor li-has-thumb-left"><a id="volumedown" href="#">Vol. Down <div class="img-icon volume-icon ui-li-thumb-left"></div></a></li>
-         	<li class="ui-li-anchor li-has-thumb-left"><a id="mute" href="#">Mute <div class="img-icon mute-icon ui-li-thumb-left"></div></a></li>
-         	<li class="ui-group-index">Shortcut</li>
-         	<li class="ui-li-anchor li-has-thumb-left"><a id="fullscreen" href="#">Fullscreen <div class="img-icon fullscreen-icon ui-li-thumb-left"></div></a></li>
-            <li class="ui-group-index">Computer</li>
-            <li class="ui-li-anchor li-has-thumb-left"><a id="shutdown" href="#">Shutdown <div class="img-icon shutdown-icon ui-li-thumb-left"></div></a></li>
-            <li class="ui-li-anchor li-has-thumb-left"><a id="restart" href="#">Restart <div class="img-icon restart-icon ui-li-thumb-left"></div></a></li>
-            <li class="ui-group-index">Settings</li>
-            <li class="ui-li-anchor li-has-thumb-left"><a href="settings.html">Address <div class="img-icon settings-icon ui-li-thumb-left"></div></a></li>
-         </ul>
-      </div>
-   </div>
-   <script src="lib/tau/wearable/js/tau.min.js"></script>
-   <script src="lib/jquery/jquery.min.js"></script>
-   <script src="js/app.js"></script>
-   <script src="js/index.js"></script>
-   <script src="js/settings.js"></script>
-   <script src="js/circle-helper.js"></script>
+	<div class="ui-page" data-enable-page-scroll="false" id="hsectionchangerPage">
+		<div class="ui-page-indicator" id="pageIndicator"></div>
+		
+	   	<div class="ui-content" id="hsectionchanger">
+			<div>
+				<section class="content-padding" style="text-align:center">
+					<ul class="ui-listview">
+			         	<li class="ui-group-index">Shortcut</li>
+			         	<li class="ui-li-anchor li-has-thumb-left"><a id="close" href="#">Close <div class="img-icon close-icon ui-li-thumb-left"></div></a></li>
+			         	<li class="ui-li-anchor li-has-thumb-left"><a id="fullscreen" href="#">Fullscreen <div class="img-icon fullscreen-icon ui-li-thumb-left"></div></a></li>
+			         </ul>
+				</section>
+				<section class="content-padding" style="text-align:center">
+					<ul class="ui-listview">
+			         	<li class="ui-group-index">Mouse</li>
+			         	<li class="ui-li-anchor li-has-thumb-left"><a href="mouse.html">Mouse <div class="img-icon mouse-icon ui-li-thumb-left"></div></a></li>
+			         </ul>
+				</section>
+				<section class="ui-section-active main-section content-padding" style="text-align:center">
+					<ul class="ui-listview">
+			         	<li class="ui-group-index">Media</li>
+			         	<li class="ui-li-anchor li-has-thumb-left"><a id="playpause">Play/Pause <div class="img-icon play-icon ui-li-thumb-left"></div></a></li>
+			         	<li class="ui-li-anchor li-has-thumb-left"><a id="next" href="#">Next <div class="img-icon next-icon ui-li-thumb-left"></div></a></li>
+			         	<li class="ui-li-anchor li-has-thumb-left"><a id="prev" href="#">Previous <div class="img-icon prev-icon ui-li-thumb-left"></div></a></li>
+			         	<li class="ui-li-anchor li-has-thumb-left"><a id="volumeup" href="#">Vol. Up <div class="img-icon volume-icon ui-li-thumb-left"></div></a></li>
+			         	<li class="ui-li-anchor li-has-thumb-left"><a id="volumedown" href="#">Vol. Down <div class="img-icon volume-icon ui-li-thumb-left"></div></a></li>
+			         	<li class="ui-li-anchor li-has-thumb-left"><a id="mute" href="#">Mute <div class="img-icon mute-icon ui-li-thumb-left"></div></a></li>
+			         </ul>
+				</section>
+				<section class="content-padding" style="text-align:center">
+					<ul class="ui-listview">
+			            <li class="ui-group-index">Computer</li>
+			            <li class="ui-li-anchor li-has-thumb-left"><a id="shutdown">Shutdown <div class="img-icon shutdown-icon ui-li-thumb-left"></div></a></li>
+			            <li class="ui-li-anchor li-has-thumb-left"><a id="restart">Restart <div class="img-icon restart-icon ui-li-thumb-left"></div></a></li>
+			         </ul>
+				</section>
+				<section class="content-padding" style="text-align:center">
+					<ul class="ui-listview">
+			            <li class="ui-group-index">Settings</li>
+			            <li class="ui-li-anchor li-has-thumb-left"><a href="settings.html">Address <div class="img-icon settings-icon ui-li-thumb-left"></div></a></li>
+			         </ul>
+				</section>
+			</div>
+		</div>
+	</div>
+   
+	<script src="lib/jquery/jquery.min.js"></script>
+	<script src="lib/tau/wearable/js/tau.min.js"></script>
+	<script src="lib/socket.io/socket.io.js"></script>
+	<script src="js/horizontal-helper.js"></script>
+	<script src="js/http-helper.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/index.js"></script>
+	<script src="js/mouse.js"></script>
+	<script src="js/settings.js"></script>
 </body>
 </html>
