Change prev to previous

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			         	<li class="ui-group-index">Media</li>
 			         	<li class="ui-li-anchor li-has-thumb-left"><a id="playpause">Play/Pause <div class="img-icon play-icon ui-li-thumb-left"></div></a></li>
 			         	<li class="ui-li-anchor li-has-thumb-left"><a id="next" href="#">Next <div class="img-icon next-icon ui-li-thumb-left"></div></a></li>
-			         	<li class="ui-li-anchor li-has-thumb-left"><a id="prev" href="#">Previous <div class="img-icon prev-icon ui-li-thumb-left"></div></a></li>
+			         	<li class="ui-li-anchor li-has-thumb-left"><a id="previous" href="#">Previous <div class="img-icon previous-icon ui-li-thumb-left"></div></a></li>
 			         	<li class="ui-li-anchor li-has-thumb-left"><a id="volumeup" href="#">Vol. Up <div class="img-icon volume-icon ui-li-thumb-left"></div></a></li>
 			         	<li class="ui-li-anchor li-has-thumb-left"><a id="volumedown" href="#">Vol. Down <div class="img-icon volume-icon ui-li-thumb-left"></div></a></li>
 			         	<li class="ui-li-anchor li-has-thumb-left"><a id="mute" href="#">Mute <div class="img-icon mute-icon ui-li-thumb-left"></div></a></li>
